# wasm_zstd

./: .gitignore  Cargo.toml  LICENSE  README.md  compress_best.html  compress_compare.html  compress_fast.html  decompress.html  rust-toolchain.toml  test1.html  test2.html  test3.html  zstd.d.ts  zstd.mjs  zstd.wasm  zstd.wasm.br  zstd.wasm.zst  zstd_dec.d.ts  zstd_dec.mjs  zstd_dec.wasm  zstd_dec_for_importScripts.js  zstd_dec_worker.d.ts  zstd_dec_worker.mjs  zstd_dec_worker_script.js  zstd_dec_worker_script.mjs  zstd_enc.d.ts  zstd_enc.mjs  zstd_enc.wasm  zstd_enc_for_importScripts.js  zstd_enc_worker.d.ts  zstd_enc_worker.mjs  zstd_enc_worker_script.js  zstd_enc_worker_script.mjs  zstd_for_importScripts.js  zstd_worker.d.ts  zstd_worker.mjs  zstd_worker_script.js  zstd_worker_script.mjs
src/: lib.rs
