[package]
name = "wasm_zstd"
version = "0.1.0"
edition = "2024"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["wasm", "compression"]
description = "esm modulesr for zstd compression and/or decompression, with sync and async (worker) versions"
keywords = ["wasm", "zstd", "esm"]
license = "Apache-2.0"
repository = "https://github.com/packurl/wasm_zstd"
include = [
    "Cargo.toml", "src", "LICENSE", "README.md", "rust-toolchain.toml",
    "zstd.d.ts", "zstd.mjs", "zstd.wasm",
    "zstd_worker.d.ts", "zstd_worker.mjs", "zstd_worker_script.mjs",
    "zstd_worker_script.js", "zstd_for_importScript.mjs",
    "zstd_enc.d.ts", "zstd_enc.mjs", "zstd_enc.wasm",
    "zstd_enc_worker_enc.d.ts", "zstd_enc_worker_enc.mjs", "zstd_enc_worker_script.mjs",
    "zstd_enc_worker_script.js", "zstd_enc_for_importScript.mjs",
    "zstd_dec.d.ts", "zstd_dec.mjs", "zstd_dec.wasm",
    "zstd_dec_worker.d.ts", "zstd_dec_worker.mjs", "zstd_dec_worker_script.mjs",
    "zstd_dec_worker_script.js", "zstd_dec_for_importScript.mjs",
    "test1.html", "test2.html", "test3.html",
    "compress_best.html", "compress_compare.html", "compress_fast.html", "decompress.html"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.zstd]
version = "0.13"
default-features = false
features = ["wasm"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

#[profile.release]
#opt-level = "z"
#lto = "thin"
#codegen-units = 1

[profile.custom]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
#panic = "abort"
